--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <h1> StyleGuide </h1>
     <p> Vores styleguide for projekt 4: digital brugergrænseflade </p>
     <aside class="navbar">
-    <h2><a href = "index.html#farver"> Farver</a></h2>
+    <h2><a href="index.html#farver"> Farver</a></h2>
 
-    <h2><a href = "index.html#typografi"> Typografi </a></h2>
+    <h2><a href="index.html#typografi"> Typografi </a></h2>
 
-    <h2><a href = "index.html#knapper"> Knapper </a></h2>
+    <h2><a href="index.html#knapper"> Knapper </a></h2>
 
-    <h2><a href = "index.html#formular"> Formular </a></h2>
+    <h2><a href="index.html#formular"> Formular </a></h2>
 
-    <h2><a href = "index.html#navigation"> Navigation </a></h2>
+    <h2><a href="index.html#navigation"> Navigation </a></h2>
 
-    <h2><a href = "index.html#logo"> Logo </a></h2>
+    <h2><a href="index.html#logo"> Logo </a></h2>
 
     <h2><a href = "index.html#formel"> Formel </a></h2>
       </aside>
@@ -27,7 +27,11 @@
   <h2 id = "farver" > Farver </h2>
   <p>
   <div class="box"
-
+    <figure class="bluebox">
+      <figcaption class="tekst">
+        <p> Gray #030303 </p>
+      </figcaption>
+    </figure>
   </div>
   <h2 id="typografi"> Typografi </h2>
   <p></p>
