Rettet i vores menubar, samt titler i html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
       <h2>
         <a href="index.html#formel"> Formel </a>
       </h2>
+
+      <h2>
+        <a href="index.html#ikoner"> Ikoner </a>
+      </h2>
     </aside>
 
     <main>
@@ -141,7 +145,7 @@
           </a>
           <p>svg</p>
         </div>
-        
+
         <div>
           <button class="btn deltag">Deltag</button>
           <p> <span><</span>button class="btn deltag"></button></p>
@@ -151,7 +155,7 @@
           <p> <span><</span>button class="btn deltager"></button></p>
         </div>
 
-     
+
       </div>
 
       <h2 id="formular"> Formular </h2>
@@ -172,6 +176,7 @@
       <p></p>
       <h2 id="logo"> Logo </h2>
       <p></p>
+      <h2 id="ikoner"> Ikoner </h2>
       <h2 id="formel"> Formel </h2>
       <p></p>
     </main>
