--- a/index.html
+++ b/index.html
@@ -202,6 +202,17 @@
           <path id="Icon_awesome-glass-cheers" data-name="Icon awesome-glass-cheers" d="M27.412,18.588a1.709,1.709,0,0,0-2.238-.926l-.947.394-1.659-4.369a5.02,5.02,0,0,0,1.479-6.551L20.333.684A1.376,1.376,0,0,0,18.619.1l-4.9,2.032L8.818.1A1.371,1.371,0,0,0,7.1.684L3.391,7.137A5.018,5.018,0,0,0,4.87,13.683L3.21,18.052l-.947-.394a1.71,1.71,0,0,0-2.238.926.344.344,0,0,0,.184.45l6.958,2.89a.339.339,0,0,0,.446-.184A1.719,1.719,0,0,0,6.687,19.5L5.74,19.1l1.689-4.442a5.082,5.082,0,0,0,.562.056,4.987,4.987,0,0,0,4.862-3.657l.866-3.233.866,3.233a4.987,4.987,0,0,0,4.862,3.657,5.082,5.082,0,0,0,.562-.056L21.692,19.1l-.947.394a1.715,1.715,0,0,0-.926,2.242.34.34,0,0,0,.446.184l6.962-2.89A.342.342,0,0,0,27.412,18.588ZM11.828,6.948,7.022,4.954,8.587,2.236l4.051,1.681Zm3.781,0L14.8,3.917,18.85,2.236l1.565,2.718L15.609,6.948Z" transform="translate(0.002 0.004)"/>
           </svg>
         </div>
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="8.041" height="13.831" viewBox="0 0 8.041 13.831">
+            <path id="Icon_ionic-ios-arrow-back" data-name="Icon ionic-ios-arrow-back" d="M13.675,13.107,19,7.878a.973.973,0,0,0,0-1.4,1.022,1.022,0,0,0-1.424,0l-6.029,5.925a.975.975,0,0,0-.029,1.363l6.055,5.966a1.023,1.023,0,0,0,1.424,0,.973.973,0,0,0,0-1.4Z" transform="translate(-11.251 -6.194)"/>
+          </svg>
+        </div>
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19">
+            <path id="Icon_ionic-md-settings" data-name="Icon ionic-md-settings" d="M20.09,13.825a5.941,5.941,0,0,0,.048-.95c0-.333-.048-.617-.048-.95l2.04-1.567a.436.436,0,0,0,.1-.617L20.284,6.463a.473.473,0,0,0-.583-.19l-2.429.95a7.071,7.071,0,0,0-1.652-.95l-.34-2.517a.521.521,0,0,0-.486-.38H10.907a.521.521,0,0,0-.486.38l-.389,2.517a8.227,8.227,0,0,0-1.652.95l-2.429-.95a.455.455,0,0,0-.583.19L3.425,9.74a.574.574,0,0,0,.1.617l2.089,1.567c0,.333-.048.617-.048.95s.048.617.048.95l-2.04,1.567a.436.436,0,0,0-.1.617l1.943,3.278a.473.473,0,0,0,.583.19l2.429-.95a7.07,7.07,0,0,0,1.652.95L10.47,22a.471.471,0,0,0,.486.38h3.887a.521.521,0,0,0,.486-.38l.389-2.517a8.222,8.222,0,0,0,1.652-.95l2.429.95a.455.455,0,0,0,.583-.19l1.943-3.278a.573.573,0,0,0-.1-.617ZM12.851,16.2a3.326,3.326,0,1,1,3.4-3.325A3.343,3.343,0,0,1,12.851,16.2Z" transform="translate(-3.375 -3.375)"/>
+          </svg>
+
+        </div>
       </div>
 
       <h2 id="formel"> Formel </h2>
