Sat de rigtige farver ind, samt hexkoder der passer til

--- a/index.html
+++ b/index.html
@@ -53,34 +53,40 @@
       <div class="box">
 
         <figure>
-          <div class="colourbox yellow"></div>
+          <div class="colourbox lightblue"></div>
           <figcaption class="tekst">
-            <p> Gray #030303 </p>
+            <p> #E3F1F0 </p>
           </figcaption>
         </figure>
 
         <figure>
           <div class="colourbox blue"></div>
           <figcaption class="tekst">
-            <p> Gray #030303 </p>
+            <p> #00454E </p>
+          </figcaption>
+        </figure>
+        <figure>
+          <div class="colourbox yellow"></div>
+          <figcaption class="tekst">
+            <p> #00454E </p>
+          </figcaption>
+        </figure>
+        <figure>
+          <div class="colourbox fbblue"></div>
+          <figcaption class="tekst">
+            <p> #4267B2 </p>
+          </figcaption>
+        </figure>
+        <figure>
+          <div class="colourbox pastelmint"></div>
+          <figcaption class="tekst">
+            <p> #AAC6C7 </p>
           </figcaption>
         </figure>
         <figure>
           <div class="colourbox red"></div>
           <figcaption class="tekst">
-            <p> Gray #030303 </p>
-          </figcaption>
-        </figure>
-        <figure>
-          <div class="colourbox red"></div>
-          <figcaption class="tekst">
-            <p> Gray #030303 </p>
-          </figcaption>
-        </figure>
-        <figure>
-          <div class="colourbox red"></div>
-          <figcaption class="tekst">
-            <p> Gray #030303 </p>
+            <p> #BC2222 </p>
           </figcaption>
         </figure>
 
