Ændre sort til offblack + tilføjet sort box under farver

--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
             <p> #BC2222 </p>
           </figcaption>
         </figure>
+        <figure>
+          <div class="colourbox black"></div>
+          <figcaption class="tekst">
+            <p> #111111 </p>
+          </figcaption>
+        </figure>
 
       </div>
 
