Kigget på kasser og opsætning

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <h1> StyleGuide </h1>
-  <p class="underoverskrift"> Vores styleguide for projekt 4: digital brugergrænseflade </p>
+  <p class="underoverskrift"> Team 2's styleguide for projekt 4: digital brugergrænseflade </p>
 
   <article class="container">
 
@@ -50,7 +50,7 @@
 
     <main>
       <h2 id="farver"> Farver </h2>
-      <div class="box">
+      <div class="box box01">
 
         <figure>
           <div class="colourbox lightblue"></div>
@@ -121,12 +121,7 @@
           </p>
         </div>
 
-        <div>
-          <h3>Heading, 300 Open Sans 40px</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto tempore harum odio quis
-            pariatur dignissimos iure, repellendus minima nostrum labore.
-          </p>
-        </div>
+        
 
       </div>
 
@@ -139,24 +134,7 @@
           <p> <span><</span>button class="btn fa-login"></button></p>
         </div>
 
-        <div>
-          <a href="google.com">
-            <svg xmlns="http://www.w3.org/2000/svg" width="267" height="48" viewBox="0 0 267 48">
-              <g id="facbook_login_knap" data-name="facbook login knap" transform="translate(-81 -671)">
-                <g id="Rectangle_1" data-name="Rectangle 1" transform="translate(81 671)" stroke="#707070"
-                  stroke-width="1">
-                  <rect width="267" height="48" rx="11" stroke="none" />
-                  <rect x="0.5" y="0.5" width="266" height="47" rx="10.5" fill="none" />
-                </g>
-                <text id="Login" transform="translate(190 704)" fill="#fff" font-size="20"
-                  font-family="SegoeUI, Segoe UI">
-                  <tspan x="0" y="0">Login</tspan>
-                </text>
-              </g>
-            </svg>
-          </a>
-          <p>svg</p>
-        </div>
+
 
         <div>
           <button class="btn deltag">Deltag</button>
@@ -187,6 +165,14 @@
       <h2 id="navigation"> Navigation </h2>
       <p></p>
       <h2 id="logo"> Logo </h2>
+      <figure>
+        <div class="logo et">
+        <figcaption class="logos">
+          <p> </p>
+          <img class="img-fluid" src="./logo1.png" alt="logo numero uno">
+        </figcaption>
+        </div>
+      </figure>
       <p></p>
       <h2 id="ikoner"> Ikoner </h2>
       <p></p>
