--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
       <!-- #region farver -->
 
       <h2 id="farver"> Farver </h2>
+      <p class="beskrivelse"> 
+        Farverne er taget fra UCL.dk og er lavet på baggrund af deres farvevalg. Den eneste farve som ikke optræder på ucl's side er den røde, som anvendes på vores log ud knap. 
+
+      </p>
       <div class="box box01">
 
         <figure>
@@ -115,6 +119,9 @@
       <!-- #region typografi -->
 
       <h2 id="typografi"> Typografi </h2>
+      <p class="beskrivelse">
+        Her kan du se typografien som vi har valgt at anvende i vores app. 
+      </p>
       <div>
         <div>
           <h3 class="overskrift-tekst">Social Planner</h3>
@@ -173,6 +180,9 @@
       <!-- #region knapper -->
 
       <h2 id="knapper"> Knapper </h2>
+      <p class="beskrivelse">
+        Her kan du se knapperne som vi anvender i vores app. Vi bruger facebook knappen som en login mulighed, samt anvender de andre knapper som kan bruges til at trykke deltag og for at se mere om begivenhederne.
+      </p>
       <div class="box">
 
         <section class="login-buttons">
@@ -202,6 +212,9 @@
       <!-- #region formular -->
 
       <h2 id="formular"> Formular </h2>
+      <p class="beskrivelse">
+        Formularerne anvendes på vores login siden, registrer og vores indstillinger. 
+      </p>
       <div class="box">
         <input type="text" placeholder="Navn">
         <input type="email" placeholder="Email">
@@ -230,6 +243,9 @@
       <!-- #region navigation -->
 
       <h2 id="navigation"> Navigation </h2>
+      <p class="beskrivelse">
+        Navigationen bruges til at kunne nagivere rundt i appen.
+      </p>
       <div class="box dark-icons">
         <i class="fa fa-home fa-3x" aria-hidden="true"></i>
         <i class="fa fa-book fa-3x" aria-hidden="true"></i>
@@ -273,6 +289,9 @@
       <!-- #region logo -->
 
       <h2 id="logo"> Logo </h2>
+      <p class="beskrivelse">
+        Logoerne nedenfor anvendes i appen og som faneikon. Vi har derfor valgt at lave tre versioner af samme logo.
+      </p>
       <div class="logo">
 
         <figure>
@@ -376,6 +395,9 @@
       <!-- #region ikoner -->
 
       <h2 id="ikoner"> Ikoner </h2>
+      <p class="beskrivelse">
+        Her vises de ikoner som vi anvender i vores app. De fremgår blandt andet i vores navbar, indstillinger og ved tilbage-knappen.
+      </p>
       <div class="box">
         <i class="fa fa-home fa-3x" aria-hidden="true"></i>
         <i class="fa fa-book fa-3x" aria-hidden="true"></i>
